# c2uplc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SCRIPT.plc  c2uplc.cabal  c2uplc.cabal.orig  cabal.project  flake.nix  testSerializedJSON.json
app/: Main.hs
nix/: hercules-ci.nix  pre-commit.nix
src/Covenant/: AppTransform.hs  ArgDict.hs  CodeGen.hs  Concretify.hs  ExtendedASG.hs  MockPlutus.hs  Plutus.hs  Transform.hs  Universe.hs
src/Covenant/CodeGen/: Common.hs  Stubs.hs
src/Covenant/Transform/: Cata.hs  Common.hs  Elim.hs  Intro.hs  Schema.hs  TyUtils.hs
src/Covenant/Transform/Pipeline/: Common.hs  ElimTyFixers.hs  FirstPass.hs  MkTyFixerFnData.hs  Monad.hs  ResolveRepPoly.hs
test/arg-resolution/: Main.hs
test/compilation/: Main.hs
test/concretification/: Main.hs
test/stubs/: Main.hs
