cabal-version: 3.0
name: c2uplc
version: 1.0.0
synopsis: UPLC code generator for Covenant IR
description:
  An executable converting valid Covenant IR serial forms into UPLC code.

homepage: https://github.com/mlabs-haskell/c2uplc
license: Apache-2.0
license-file: LICENSE
author: Koz Ross, Sean Hunter
maintainer: koz@mlabs.city, sean@mlabs.city
bug-reports: https://github.com/mlabs-haskell/c2uplc/issues
copyright: (C) MLabs 2025
category: Covenant
tested-with: ghc ==9.8.4
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common sections
common lang
  ghc-options:
    -Wredundant-strictness-flags
    -Wmissing-deriving-strategies
    -Woperator-whitespace
    -Wambiguous-fields
    -Wmisplaced-pragmas
    -Wall
    -Wmissing-import-lists
    -Wcompat
    -Wredundant-bang-patterns
    -Wmissing-export-lists

  default-extensions:
    BangPatterns
    BinaryLiterals
    DataKinds
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  build-depends:
    algebraic-graphs,
    base >=4.19.0.0 && <5,
    containers,
    covenant ==1.3.0,
    mtl,
    nonempty-vector,
    optics-core,
    optics-extra,
    prettyprinter,
    row-types,
    serialise ==0.2.6.1,
    smash,
    text,
    transformers,
    vector,

  default-language: Haskell2010

common test-lang
  import: lang
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    QuickCheck,
    bimap,
    c2uplc,
    containers >=0.6.8 && <0.8,
    covenant ==1.3.0,
    prettyprinter ==1.7.1,
    tasty ==1.5.3,
    tasty-expected-failure ==0.12.3,
    tasty-hunit ==0.10.2,
    tasty-quickcheck ==0.11.1,
    text ==2.1.1,
    transformers ==0.6.1.0,
    vector ==0.13.2.0,

-- Executable
executable c2uplc
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    aeson,
    c2uplc,
    filepath ==1.4.301.0,
    optparse-applicative ==0.19.0.0,
    plutus-core,
    plutus-ledger-api,
    plutus-tx,

-- Primary library
library
  import: lang
  exposed-modules:
    Covenant.ArgDict
    Covenant.CodeGen
    Covenant.CodeGen.Common
    Covenant.CodeGen.Stubs
    Covenant.ExtendedASG
    Covenant.Plutus
    Covenant.Transform
    Covenant.Transform.Cata
    Covenant.Transform.Common
    Covenant.Transform.Elim
    Covenant.Transform.Intro
    Covenant.Transform.Pipeline.Common
    Covenant.Transform.Pipeline.ElimTyFixers
    Covenant.Transform.Pipeline.FirstPass
    Covenant.Transform.Pipeline.MkTyFixerFnData
    Covenant.Transform.Pipeline.Monad
    Covenant.Transform.Pipeline.ResolveRepPoly
    Covenant.Transform.Schema
    Covenant.Transform.TyUtils
    Covenant.Universe

  hs-source-dirs: src
  build-depends: plutus-core ==1.51.0.0

test-suite arg-resolution
  import: test-lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/arg-resolution
  build-depends: plutus-core ==1.51.0.0

test-suite concretification
  import: test-lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/concretification
  build-depends: plutus-core ==1.51.0.0

test-suite compilation
  import: test-lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/compilation
  build-depends: plutus-core ==1.51.0.0

test-suite stubs
  import: test-lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/stubs
  build-depends: plutus-core ==1.51.0.0
